--- a/examples/houdini.env
+++ b/examples/houdini.env
@@ -7,14 +7,14 @@
 #HOUDINI_ANONYMOUS_STATISTICS = 0
 
 # Set Main Paths
-TOOLS = "C:/Users/zaufel/OneDrive - mdw.ac.at/houdini_repo/tools"
+TOOLS = "C:/Users/phili/OneDrive - mdw.ac.at/houdini_repo_tools/tools"
 REDSHIFT = "C:/ProgramData/Redshift"
 
 # Set Subfolders
 MC = $TOOLS/mc
 MC_VEX = $MC/vex
 LABS = $TOOLS/sidefxlabs
-LYNX = $TOOLS/lynx
+LYNX = $TOOLS/plugins/SideFX/Houdini
 MOPS = $TOOLS/mops
 QLIB = $TOOLS/qLib
 QLIB_OTL = $QLIB/otls/base
@@ -23,8 +23,8 @@ VFXHOMELAND = $TOOLS/vfxhomeland
 H2AE = $TOOLS/h2ae
 AV = $TOOLS/AliceVision-2.0.0
 QUIXEL = $TOOLS/quixel/3.4.0/MSLiveLink
-RS = $REDSHIFT/Plugins/Houdini/18.0.287
-RSPXR = $REDSHIFT/Plugins/Solaris/18.0.287
+RS = $REDSHIFT/Plugins/Houdini/18.0.391
+RSPXR = $REDSHIFT/Plugins/Solaris/18.0.391
 RSBIN = $REDSHIFT/bin
 BBB = $TOOLS/BBB
 OPTIX = $TOOLS/optix
